--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,29 +1,19 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-    xmlns:tools="http://schemas.android.com/tools" 
-    package="com.yourcompany.yourapp">
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application>
-
-        <!-- Used when Application Entry is set to Activity, otherwise remove this activity block -->
-        <activity android:name="com.unity3d.player.UnityPlayerActivity" 
-            android:theme="@style/UnityThemeSelector" 
-	    android:exported="true">
+	<!-- Used when Application Entry is set to Activity, otherwise remove this activity block -->
+	<activity android:name="com.unity3d.player.UnityPlayerActivity" android:theme="@style/UnityThemeSelector">
 	    <intent-filter>
 		<action android:name="android.intent.action.MAIN"/>
 		<category android:name="android.intent.category.LAUNCHER"/>
 	    </intent-filter>
 	    <meta-data android:name="unityplayer.UnityActivity" android:value="true"/>
 	</activity>
-
 	<!-- Used when Application Entry is set to GameActivity, otherwise remove this activity block -->
-	<activity android:name="com.unity3d.player.UnityPlayerGameActivity" 
-	android:theme="@style/BaseUnityGameActivityTheme" 
-	android:exported="true">
+	<activity android:name="com.unity3d.player.UnityPlayerGameActivity" android:theme="@style/BaseUnityGameActivityTheme">
 	    <intent-filter>
-	        <action android:name="android.intent.action.MAIN"/>
+		<action android:name="android.intent.action.MAIN"/>
 		<category android:name="android.intent.category.LAUNCHER"/>
 	    </intent-filter>
 	    <meta-data android:name="unityplayer.UnityActivity" android:value="true"/>
